--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha || true"
+    "test": "nyc --reporter=html --reporter=text mocha || true --timeout=3000"
   },
   "author": "gillianbc",
   "license": "ISC",
   "devDependencies": {
     "chai": "4.2.0",
-    "mocha": "5.2.0"
+    "mocha": "5.2.0",
+    "nyc": "^13.1.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
   }
 }
