--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text mocha || true --timeout=3000"
+    "test": "nyc --reporter=html --reporter=text mocha || true --timeout=3000",
+    "test2": "nyc --reporter=html --reporter=text mocha test/async*.js|| true --timeout=3000",
+    "test3": "nyc --reporter=html --reporter=text mocha test/prom*.js|| true --timeout=3000"
   },
   "author": "gillianbc",
   "license": "ISC",
   "devDependencies": {
     "chai": "4.2.0",
+    "chai-as-promised": "^7.1.1",
     "mocha": "5.2.0",
     "nyc": "^13.1.0"
   },
