--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha || true --timeout=3000",
     "test2": "nyc --reporter=html --reporter=text mocha test/async*.js|| true --timeout=3000",
-    "test3": "nyc --reporter=html --reporter=text mocha test/prom*.js|| true --timeout=3000"
+    "test3": "nyc --reporter=html --reporter=text mocha test/prom*.js|| true --timeout=3000",
+    "test4": "nyc --reporter=html --reporter=text mocha test/utils/validatorsTest.js|| true --timeout=3000"
   },
   "author": "gillianbc",
   "license": "ISC",
