Used recursive so that mocha picks up files is subdir

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text mocha || true --timeout=3000",
+    "test": "nyc --reporter=html --reporter=text mocha --recursive || true --timeout=3000",
     "test2": "nyc --reporter=html --reporter=text mocha test/async*.js|| true --timeout=3000",
     "test3": "nyc --reporter=html --reporter=text mocha test/prom*.js|| true --timeout=3000",
     "test4": "nyc --reporter=html --reporter=text mocha test/utils/validatorsTest.js|| true --timeout=3000"
